# AI-trading-agent

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  DISCLAIMER.md  Dockerfile  FINAL_STRUCTURE.md  FX_TRADING_README.md  LICENSE  LICENSE.md  Makefile  OPTIONS_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_LOCAL.md  README.md  SAFETY.md  SECURITY.md  TEST_RESULTS.md  VALIDATION_CHECKLIST.md  docker-compose.yml  eslint.config.mjs  launch_all.bat  main.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  run_agent.bat  run_bridge.bat  run_canary_shadow.bat  run_confidence_monitor.bat  setup.py  start.bat  tsconfig.json
fx-quant-stack/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
fx-quant-stack/alembic/: env.py
fx-quant-stack/alembic/versions/: 20260317_0001_initial_runtime_schema.py  20260318_0002_lifecycle_ops_backfill.py  20260319_0003_phase2_feature_push_governance.py  20260408_0004_phase1_orchestration_core.py  20260408_0005_phase7_experiment_factory.py  20260408_0005_phase7_experiment_promotion_ledger.py
fx-quant-stack/config/: orchestration_replay_profiles.json
fx-quant-stack/configs/: base.yaml  live.yaml  training.yaml
fx-quant-stack/configs/horizons/: intraday.yaml  swing.yaml
fx-quant-stack/configs/pairs/: majors.yaml
fx-quant-stack/docker/: app.Dockerfile  docker-compose.offline.yml  docker-compose.yml  llamacpp.Dockerfile  research-gpu.Dockerfile  rl-research.Dockerfile
fx-quant-stack/docs/: architecture.md  promotion_gate.md  runbooks.md
fx-quant-stack/feature_repo/: README.md  definitions.py  entities.py  feature_store.yaml  services.py  views.py
fx-quant-stack/feature_repo/data/: offline_placeholder.parquet
fx-quant-stack/scripts/: backtest.py  build_features.py  build_labels.py  evaluate_fast_gate.py  freeze_baseline.py  ingest_bars.py  migrate_provider_partitions.py  remediate_state_snapshot.py  score_live.py  train_all.py  train_deep_stale.py  train_exit.py  train_intraday_tcn.py  train_intraday_xgb.py  train_meta.py  train_regime.py  train_reversal.py  train_swing_transformer.py  train_swing_xgb.py
fx-quant-stack/src/fxstack/: __init__.py  config_groups.py  settings.py  tasks.py
fx-quant-stack/src/fxstack/api/: __main__.py  app.py  auth.py  middleware.py  observability.py  schemas.py  wire.py
fx-quant-stack/src/fxstack/backtest/: adaptive_policy.py  costs.py  engine.py  reports.py  twin_types.py
fx-quant-stack/src/fxstack/belief/: __init__.py  adapters.py  candidate_builder.py  composer.py  cross_pair.py  dataset.py  engine.py  labels.py  outcome_labels.py  types.py
fx-quant-stack/src/fxstack/data/: ingest.py  live_quotes.py  provider_migration.py
fx-quant-stack/src/fxstack/feast/: __init__.py  compaction.py  offline_builder.py  online_features.py  parquet_adapter.py  push.py  repository.py  types.py
fx-quant-stack/src/fxstack/features/: build.py  fx_lifecycle.py  multi_tf_contract.py  session_contract.py
fx-quant-stack/src/fxstack/improve/: __init__.py  dataset_builder.py  evaluator.py  explain.py  factory_bridge.py  graph.py  knobs.py  loop.py  memory.py  objective.py  proposer.py  robustness.py
fx-quant-stack/src/fxstack/io/: parquet_store.py
fx-quant-stack/src/fxstack/labels/: exit_labels.py  meta_label.py  path_quality.py  reversal_labels.py  triple_barrier.py  validation.py
fx-quant-stack/src/fxstack/live/: execution_gate.py  policy.py  scorer.py
fx-quant-stack/src/fxstack/llm/: __init__.py  client.py  weights.py
fx-quant-stack/src/fxstack/mlops/: __init__.py  lineage.py  model_uri.py  registry.py  run_context.py  types.py
fx-quant-stack/src/fxstack/models/: _xgb_base.py  _xgb_multiclass.py  artifact_contract.py  base.py  belief_horizon_xgb.py  belief_ranker_xgb.py  belief_regressor_xgb.py  belief_scenario_xgb.py  exit_policy_xgb.py  intraday_tcn.py  intraday_xgb.py  meta_filter.py  patchtst.py  regime_hmm.py  reversal_failure_xgb.py  reversal_opportunity_xgb.py  swing_transformer.py  swing_xgb.py
fx-quant-stack/src/fxstack/orchestration/: __init__.py  approvals.py  checkpointer.py  (+11 more)
fx-quant-stack/tests/: conftest.py  test_adaptive_playbook_thresholds.py  test_agent_docs_map.py  test_allocator_numeric_safety.py  test_api_contract.py  test_api_report_and_bars.py  test_artifact_paths.py  test_artifact_payload_contract.py  test_belief_candidate_builder.py  test_belief_outcome_labels.py  test_belief_ranker_composer.py  test_belief_v2_artifact_loading.py  test_broker_connectors.py  test_broker_dispatch.py  test_calibration.py  test_capital_governance.py  test_committee_scenarios.py  test_config_groups.py  test_cross_pair_intelligence.py  test_deep_stale_boundary.py  test_desk_overlay.py  test_digital_twin_adaptive_mode.py  test_digital_twin_backtest.py  test_digital_twin_overlay_parity.py  test_directional_belief_artifact_loading.py  test_directional_belief_composer.py  test_directional_belief_labels.py  test_directional_belief_training_contract.py  test_dukascopy_ingest.py  test_e2e_smoke.py  test_execution_gate.py  test_feast_repository.py  test_feast_training_slice.py  test_feature_freshness.py  test_feature_push_governance.py  test_features.py  test_improve_campaign.py  test_improve_dataset_builder.py  test_improve_explain.py  test_improve_factory_bridge.py  (+81 more)
fx-quant-stack/tests/governor/: test_invariants.py
fx-quant-stack/tests/twin/: test_committee_lane.py
(+835 files in other folders)
