# Legacy compatibility manifest.
# Active Python package and dependency management live under fx-quant-stack/pyproject.toml.
[tool.poetry]
name = "fx-trading-system"
version = "1.0.0"
description = "FX trading system using EL momentum and regime filtering with IG MT4 integration"
authors = ["Trading Agent Contributors"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
# Core data science
pandas = "^2.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
# FX trading system
requests = "^2.31.0"
pyyaml = "^6.0"
flask = "^3.0.0"
flask-cors = "^4.0.0"
# Optional: HMM regime detection
hmmlearn = {version = "^0.3.0", optional = true}
scikit-learn = {version = "^1.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
hmm = ["hmmlearn", "scikit-learn"]

[tool.poetry.scripts]
fx-trader = "src.trader.cli:main"
trader = "src.trader.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
