[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-quant-stack"
version = "0.1.0"
description = "FX quant stack rebuild with Dukascopy CSV ingestion, baseline ML models, and MT4 bridge-compatible runtime"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "pyarrow>=15.0",
  "duckdb>=1.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "xgboost>=2.1",
  "hmmlearn>=0.3.3",
  "torch>=2.6,<2.7",
  "transformers>=5.3",
  "pytorch-tcn>=1.2.3",
  "optuna>=4.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "requests>=2.31",
  "dukascopy-python>=4.0.1,<5",
  "mlflow>=2.16",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
research = [
  "jupyterlab>=4.2",
  "matplotlib>=3.9"
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
